--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,9 @@ body{
 }
 #logo{
     max-height: 60px;
-    width: 100%;
+}
+#logoContainer{
+    width: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,6 +34,7 @@ body{
     
 #redes{
     margin-left: auto;
+    width: 250px;
 }
 
 /*Estilos del footer*/
