--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,10 +5,14 @@
 body{
     background-color: #333;
     min-height: 100vh;
+    margin:0;
 }
 /*estilo del header como tal*/
 #nav-bar{
     padding: 0 100px;
+    margin: 3px;
+    width: 90%;
+    position: fixed;
     display: flex;
     justify-content:center;
     align-items: center;
