--- a/CSS/aboutus.css
+++ b/CSS/aboutus.css
@@ -1,3 +1,13 @@
+.page-title{
+    color: #ebebeb;
+    font-size: 60;
+}
+.line{
+    width: 40%; height: 6px;
+    background-color: #ebebeb;
+    border-radius: 3px;
+    margin: 10px 0 30px 0;
+}
 .container{
     display:flex;
     flex-direction: column;
@@ -6,11 +16,12 @@
     padding: 20px 60px;
 }
 .person{
-    min-width:100%;
     display: flex;
+    height:auto;
     padding: 20px 45px;
     border-radius: 10px;
-    box-shadow: 8px 9px 20px rgb(255,255,255);
+    box-shadow: 8px 9px 20px #ebebeb;
+    height: fit-content;
 }
 .box-image{
     width: 300px; height: 480px; 
@@ -20,8 +31,53 @@
 .box-image img{
     max-width:300; min-width: 300px; 
     max-height: 480px; min-height: 480px;
-    background-color: blue;
     position:relative;
     right:-10px;
     top:20px;
+}
+.info{
+    margin: 15px 30px;
+    display: flex;
+    flex-direction: column;
+}
+.name{
+    color: #FAA819;
+    font-size: 32px;
+    margin: 0;
+}
+.name .line{
+    color: #ebebeb;
+    width:20%;
+    margin: 5px 0 10px 0;
+    height: 4px;
+    border-radius: 2px;
+}
+.position{
+    margin: 5px 0;
+    color:#ebebeb;
+    text-indent: 10px;
+}
+.des{
+    max-width: 70%;
+}
+.des p{
+    color: #ebebeb;
+    text-indent: 10px;
+    font-size: 18px;
+    text-wrap: wrap;
+}
+.redes-person{
+    position:static;
+    bottom: 0;
+    list-style: none;
+    display: flex;
+    font-size: 20px; 
+}
+.redes-person a{
+    color:#fff;
+    margin: 0 10px;
+}
+.redes-person li:hover{
+    transform: scale(1.5);
+    transition: .3s;
 }
