--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,14 +7,17 @@ body{
     min-height: 100vh;
     margin:0;
 }
+.Office{
+    width: 100%;
+}
 /*estilo del header como tal*/
-#nav-bar{
-    padding: 0 100px;
-    margin: 3px;
-    width: 90%;
+.nav-bar{
+    padding: 5px 80px;
+    margin: 0 0 0 3px;
     position: fixed;
+    left: 0; right:0;
     display: flex;
-    justify-content:center;
+    justify-content: space-between;
     align-items: center;
     border-radius:30px 5px 5px 100px;
     background: rgb(250,168,25);
@@ -22,23 +25,22 @@ body{
         rgba(200,82,186,1) 66%, rgba(202,108,230,1) 100%);
 }
 /*estilo que del div que ubica el logo*/
-#etiquetas{
-    margin-left: auto;
-    width: 350;
+.etiquetas{
+    position: relative;
+    left: 0; 
 }
-#logo{
+.logo{
     max-height: 60px;
+    cursor: pointer;
 }
-#logoContainer{
-    width: auto;
+.logoContainer{
+    float: none;
     display: flex;
     justify-content: center;
-    align-items: center;
+    margin:auto;
 }
-    
-#redes{
+.redes{
     margin-left: auto;
-    width: 250px;
 }
 
 /*Estilos del footer*/
