--- a/CSS/proyectoGeneralStyle.css
+++ b/CSS/proyectoGeneralStyle.css
@@ -6,8 +6,15 @@
     margin: 0;
     padding: 0;
 }
-body{
-    background-color: #000000;
+html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.divContent{
+    flex: 1;
 }
 header{
     padding: 25px 20px 0 20px;
@@ -67,6 +74,56 @@ header{
     transform: scale(1.05);
     transition: 0.4s;
 }
-.logoMenuPokemon{
-    max-height: 50px;
+footer {
+    color: white;
+    background-color: #000;
+}
+.footerContainer {
+    display: flex;
+    justify-content: center;
+    padding: 10px 50px;
+    align-items: center;
+}
+.divLogoFooter {
+    flex: 0 0 auto;
+}
+.divLogoFooter img {
+    max-height: 80px;
+}
+.divInfoContactoFooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-left: 20px;
+}
+.divRedesFooter {
+    height: 100px;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 0 20px;
+}
+.divRedesFooter a{
+    font-size: 30px;
+    margin: 0 20px;
+}
+.divMenuNavegacionFooter {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-left: auto;
+}
+.divMenuNavegacionFooter ul li {
+    list-style: none;
+}
+.divMenuNavegacionFooter ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+}
+.divFooterCopy{
+    text-align: center;
 }
