--- a/Proyecto/CSS/proyectoStyleBase.css
+++ b/Proyecto/CSS/proyectoStyleBase.css
@@ -7,7 +7,7 @@
     padding: 0;
 }
 body{
-    background-color: #000000;
+    background-color: #FFFFF0;
 }
 header{
     padding: 25px 20px 0 20px;
@@ -69,4 +69,50 @@ header{
 }
 .logoMenuPokemon{
     max-height: 50px;
+}
+footer {
+    color:white;
+    background-color: #000;
+}
+.footerContainer{
+    display:flex;
+    justify-content:stretch;
+    padding: 10px 50px;
+}
+.divLogoFooter{
+    display: flex;
+    justify-content: center;
+}
+.divLogoFooter img{
+    src: url();
+    min-height: 100px; max-height: 100px;
+    min-width:200px; max-width: 200px;
+    background-color: red;
+}
+.divInfoContactoFooter{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 0 20px;
+}
+.divRedesFooter{
+    display:absolu;
+    align-items: flex-end;
+    
+}
+.divMenuNavegacionFooter{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    right: 0px;
+    margin: 0 20px
+}
+.divMenuNavegacionFooter ul li{
+    list-style: none;
+}
+.divMenuNavegacionFooter ul li a{
+    color: #fff;
+    text-decoration: none;
 }
