--- a/CSS/proyectoStyleBase.css
+++ b/CSS/proyectoStyleBase.css
@@ -6,8 +6,18 @@
     margin: 0;
     padding: 0;
 }
+html, body{
+    margin: 0;
+    padding: 0;
+}
 body{
     background-color: #FFFFF0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.contenidoPagina{
+    flex:1;
 }
 header{
     padding: 25px 20px 0 20px;
@@ -18,7 +28,7 @@ header{
     border-width: 0 0 2px 0;
     border-color: #000000;
     height: 120px;
-    background-image: url(../Image/fondos/bannerPokebola.jpeg);
+    background-image: url(../IMAGE/fondos/bannerPokebola.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -71,48 +81,54 @@ header{
     max-height: 50px;
 }
 footer {
-    color:white;
+    color: white;
     background-color: #000;
 }
-.footerContainer{
-    display:flex;
-    justify-content:stretch;
+.footerContainer {
+    display: flex;
+    justify-content: space-between;
     padding: 10px 50px;
+    align-items: center;
 }
-.divLogoFooter{
-    display: flex;
-    justify-content: center;
+.divLogoFooter {
+    flex: 0 0 auto;
 }
-.divLogoFooter img{
-    src: url();
-    min-height: 100px; max-height: 100px;
-    min-width:200px; max-width: 200px;
-    background-color: red;
-}
-.divInfoContactoFooter{
+.divInfoContactoFooter {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    margin: 0 20px;
+    margin-left: 20px;
 }
-.divRedesFooter{
-    display:absolu;
-    align-items: flex-end;
-    
-}
-.divMenuNavegacionFooter{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.divRedesFooter {
     position: absolute;
-    right: 0px;
-    margin: 0 20px
+    left: 50%;
+    transform: translateX(-50%);
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.divMenuNavegacionFooter ul li{
+.divRedesFooter a{
+    font-size: 30px;
+    margin: 0 20px;
+    color: #fff;
+}
+.divMenuNavegacionFooter {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-left: auto;
+}
+.divMenuNavegacionFooter ul li {
     list-style: none;
 }
-.divMenuNavegacionFooter ul li a{
+.divMenuNavegacionFooter ul li a {
     color: #fff;
     text-decoration: none;
+    font-size: 14px;
+}
+.divFooterCopy{
+    text-align: center;
 }
