--- a/CSS/landingNuestroEquipo.css
+++ b/CSS/landingNuestroEquipo.css
@@ -9,19 +9,22 @@
     margin: 10px 0 30px 0;
 }
 .container{
+    flex:1;
     display:flex;
     flex-direction: column;
     justify-content:center;
     align-items: center;
     padding: 20px 60px;
 }
-.person{
+.divCuadroPersonaLanding{
     display: flex;
     height:auto;
     padding: 20px 45px;
     border-radius: 10px;
     box-shadow: 8px 9px 20px #ebebeb;
-    height: fit-content;
+}
+.person{
+    display: flex;
 }
 .box-image{
     width: 300px; height: 480px; 
@@ -31,14 +34,12 @@
 .box-image img{
     max-width:300; min-width: 300px; 
     max-height: 480px; min-height: 480px;
-    position:relative;
-    right:-10px;
-    top:20px;
+    transform: translateX(10px) translateY(20px);
 }
 .info{
     margin: 15px 30px;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
 }
 .name{
     color: #FAA819;
@@ -63,18 +64,16 @@
     font-size: 18px;
     text-wrap: wrap;
 }
-.redes-person{
-    position:static;
-    bottom: 0;
-    list-style: none;
+.redesPerson{
     display: flex;
-    font-size: 20px; 
+    justify-content: flex-start;
 }
-.redes-person a{
-    color:#fff;
-    margin: 0 10px;
+.redesPerson a{
+    color: transparent;
+    padding:5px;
+    background-color: white;  
 }
-.redes-person li:hover{
+.redesPerson a:hover{
     transform: scale(1.5);
     transition: .3s;
 }
