--- a/CSS/landingStyleBase.css
+++ b/CSS/landingStyleBase.css
@@ -2,10 +2,15 @@
     font-family: monospace;
 }
 /*estilo del body en general*/
+body,html{
+    margin: 0;
+    padding: 0;
+}
 body{
     background-color: #333;
     min-height: 100vh;
-    margin:0;
+    display: flex;
+    flex-direction: column;
 }
 .Office{
     width: 100%;
@@ -49,7 +54,8 @@ body{
 /*Estilos del footer*/
 footer{
     position: relative;
-    min-height: 100px; 
+    min-height: 100px;
+    width: 100;
     background: rgb(250,168,25);
     background: linear-gradient(317deg, rgba(250,168,25,1) 0%, rgba(252,180,21,1) 30%, 
         rgba(200,82,186,1) 66%, rgba(202,108,230,1) 100%);
