--- a/CSS/landingStyleBase.css
+++ b/CSS/landingStyleBase.css
@@ -1,5 +1,6 @@
 *{
     font-family: monospace;
+    color: #ffff;
 }
 /*estilo del body en general*/
 body,html{
@@ -12,8 +13,17 @@ body{
     display: flex;
     flex-direction: column;
 }
+.container{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 60px;
+}
 .Office{
     width: 100%;
+    z-index: 1;
+    border-radius: 0 0 10px 10px;
 }
 /*estilo del header como tal*/
 .nav-bar{
@@ -28,6 +38,7 @@ body{
     background: rgb(250,168,25);
     background: linear-gradient(317deg, rgba(250,168,25,1) 0%, rgba(252,180,21,1) 30%, 
         rgba(200,82,186,1) 66%, rgba(202,108,230,1) 100%);
+        z-index: 2;
 }
 /*estilo que del div que ubica el logo*/
 .etiquetas{
@@ -50,7 +61,12 @@ body{
 .redes{
     margin-left: auto;
 }
-
+.line{
+    width: 40%; height: 6px;
+    background-color: #ebebeb;
+    border-radius: 3px;
+    margin: 10px 0 30px 0;
+}
 /*Estilos del footer*/
 footer{
     position: relative;
@@ -64,4 +80,5 @@ footer{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-radius: 10px 10px 0 0;
 }
